Projects files renamed

--- a/Day_04_NOV_02/.project
+++ b/Day_04_NOV_02/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Day_2_OCT_31</name>
+	<name>Day_04_NOV_02</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1667878021911</id>
+			<id>0</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
